--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: pistonyang/pytorch:base-cu100
-        auth:
-          username: $DOCKER_USERNAME
-          password: $DOCKERHUB_PASSWORD
-
+      - image: circleci/python:3.6.4
 
     working_directory: ~/torch-toolbox
 
@@ -18,6 +14,11 @@ jobs:
       - checkout
       # run tests!
       # https://pytest.org
+      - run:
+          name: install pytorch
+          command: |
+            sudo pip3 install https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
+            pip3 install https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
       - run:
           name: install pytest
           command: |
