--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,17 +12,19 @@ jobs:
 
     steps:
       - checkout
-      # run tests!
-      # https://pytest.org
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+      - restore_cache:
+          key: deps10-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: install pytorch
           command: |
-            sudo pip3 install https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
-            pip3 install https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
+            sudo pip3 -q install https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
+            sudo pip3 -q install https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
       - run:
           name: install pytest
           command: |
-            pip install pytest
+            sudo pip3 -q install pytest
       - run:
           name: run tests
           command: |
