--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,29 @@ version: 2
 jobs:
   build:
     docker:
-      - image: pistonyang/pytorch:base-cu100
+      - image: circleci/python:3.6.4
 
     working_directory: ~/torch-toolbox
 
     steps:
       - checkout
-      # run tests!
-      # https://pytest.org
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+      - restore_cache:
+          key: deps10-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+      - run:
+          name: install pytorch
+          command: |
+            sudo pip3 -q install https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
+            sudo pip3 -q install https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
       - run:
           name: install pytest
           command: |
-            pip install pytest
+            sudo pip3 -q install pytest
       - run:
           name: run tests
           command: |
+            export PYTHONPATH=/home/circleci/torch-toolbox/:${PYTHONPATH}
             pytest tests
 
       - store_artifacts:
