--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,10 @@ jobs:
           command: |
             sudo pip3 -q install https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
             sudo pip3 -q install https://download.pytorch.org/whl/cpu/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
+      -run:
+         name: install dependence
+         command: |
+            sudo pip3 -q install numpy tqdm pyarrow six lmdb
       - run:
           name: install pytest
           command: |
