--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install dependence
         run: |
-          conda install -y tqdm pyarrow six lmdb pytest
+          conda install -y tqdm pyarrow six python-lmdb pytest scikit-learn
 
       - name: Checkout
         uses: actions/checkout@master
