--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Install dependence
         run: |
-          conda install -y tqdm pyarrow six python-lmdb pytest scikit-learn
+          conda install -y tqdm pyarrow six python-lmdb pytest scikit-learn \
+          && conda clean --all --yes
 
       - name: Checkout
         uses: actions/checkout@master
