--- a/.github/workflows/Upload.yml
+++ b/.github/workflows/Upload.yml
@@ -9,10 +9,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install setuptools
+        run: >-
+          python -m
+          pip install
+          setuptools
+          --user
       - name: Generate Pubilsh File
         run: |
-          python3 setup.py sdist bdist_wheel
+          python setup.py sdist bdist_wheel
       - name: Automatic Publish
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
