--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,13 +10,14 @@ jobs:
       - name: Install Pytorch
         run: |
           conda install -y pytorch torchvision cpuonly -c pytorch \
-          && conda clean --all --yes
+          && conda clean --all --yes \
+          && usr/share/miniconda/bin/pip install -y opencv-python
 
       - name: Install dependence
         run: |
           conda install -y tqdm pyarrow six python-lmdb pytest scikit-learn \
-          && conda clean --all --yes
-          conda install -c conda-forge opencv
+          && conda clean --all --yes \
+          && conda install -c conda-forge opencv
       - name: Checkout
         uses: actions/checkout@master
 
