--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,9 +13,9 @@ jobs:
           && conda clean --all --yes
       - name: Install dependence
         run: |
-          conda install -y tqdm pyarrow six python-lmdb pytest scikit-learn transformers \
+          conda install -y tqdm pyarrow six python-lmdb pytest scikit-learn \
           && conda clean --all --yes \
-          && /usr/share/miniconda/bin/pip install -q opencv-python tensorboard pyyaml prettytable
+          && /usr/share/miniconda/bin/pip install -q opencv-python tensorboard pyyaml prettytable transformers
       - name: Checkout
         uses: actions/checkout@master
 
